# ODT

./: .gitignore  CITATION.cff  CMakeLists.txt  LISCENSE.txt  README.md
build_make/: Makefile  README  build_yaml.sh  make.FSL  make.IGNITE  make.MAC  make.OMEN  make.SPARK
cmake/: FindCantera.cmake  Findcantera.cmake  Findsundials.cmake  Findyaml-cpp.cmake
cmake_build/: README  clean_this_dir.sh  user_config
doc/: Doxyfile  documentation_online.html
doc/doxygen_build_pages/: mainpage.doxy  notes.doxy
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  documentation_online.html  index.md  mainpage.dox  pages.dox
docs/doxygen_build_pages/: mainpage.doxy  mainpage_backup
ext/: CMakeLists.txt
input/: README.md
input/.ipynb_checkpoints/: properties-checkpoint.ipynb
input/channelFlow/: input.yaml
input/coldJet/: input.yaml
input/couetteFlow/: input.yaml
input/flmlt/: input.yaml
input/flmltX/: input.yaml
input/gas_mechanisms/: air.xml  air.yaml  c2h4red.yaml  (+9 more)
post/: README.md
run/: .gitignore  CMakeLists.txt  READEME.md  changeInputParam.py  prepOneRlz.cc  runManyRlz.cc  runManyRlz.sh  runOneRlz.cc  runOneRlz.sh  slrmJob.sh  slrmJob_array.sh
source/: CMakeLists.txt  MersenneTwister.h  cvodeDriver.cc  cvodeDriver.h  domain.cc  domain.h  eddy.cc  eddy.h  inputoutput.cc  inputoutput.h  main.cc  meshManager.cc  meshManager.h  micromixer.cc  micromixer.h  odtExceptions.cc  odtExceptions.h  param.cc  param.h  processor.cc  processor.h  randomGenerator.h  solver.cc  solver.h  streams.cc  streams.h
source/chemical_mechanisms/: CMakeLists.txt  c2h4red.cc  c2h4red.h  canteraRR.h  ch4red.cc  ch4red.h  chemMech.h  chemNone.h  fourstep_ch4.cc  fourstep_ch4.h  onestep_c2h4.cc  onestep_c2h4.h  onestep_ch4.cc  onestep_ch4.h  simple_dlr.cc  simple_dlr.h
source/cvode/: CMakeLists.txt  cvode.c  cvode_dense.c  nvector_serial.h  sundials_config.h  sundials_dense.c  sundials_smalldense.c  sundials_smalldense.h  sundials_types.h
source/domaincases/: CMakeLists.txt  domaincase.cc  domaincase.h  domaincase_odt_MFjetFlame.cc  domaincase_odt_MFjetFlame.h  domaincase_odt_RT.cc  domaincase_odt_RT.h  domaincase_odt_channel.cc  domaincase_odt_channel.h  domaincase_odt_channelScalar.cc  domaincase_odt_channelScalar.h  domaincase_odt_coldJet.cc  domaincase_odt_coldJet.h  domaincase_odt_coldPropaneJet.cc  domaincase_odt_coldPropaneJet.h  domaincase_odt_isothermalWall.cc  domaincase_odt_isothermalWall.h  domaincase_odt_jetFlame.cc  domaincase_odt_jetFlame.h  domaincase_odt_jetMixlRxn.cc  domaincase_odt_jetMixlRxn.h
source/domainvariables/: CMakeLists.txt  dv.cc  dv.h  dv_aDL.cc  dv_aDL.h  dv_chi.cc  dv_chi.h  dv_chi_dmf.cc  dv_chi_dmf.h  dv_dvisc.cc  dv_dvisc.h  dv_dvisc_const.cc  dv_dvisc_const.h  dv_enth.cc  dv_enth.h  dv_hr.cc  dv_hr.h  dv_mixf.cc  dv_mixf.h  dv_pos.cc  dv_pos.h  dv_posf.cc  dv_posf.h  dv_rho.cc  dv_rho.h  dv_rho_const.cc  dv_rho_const.h  dv_rho_mf.cc  dv_rho_mf.h  dv_sca.cc  dv_sca.h  dv_soot.cc  dv_soot.h  dv_temp.cc  dv_temp.h  dv_uvw.cc  dv_uvw.h  dv_ygas.cc  dv_ygas.h  dv_ygas_noRxn.cc  (+1 more)
source/domainvariables/soot/: CMakeLists.txt  CQMOM.cc  dv_soot.cc  dv_soot.h  dv_soot_CQMOM.cc  dv_soot_CQMOM.h  dv_soot_LOGN.cc  dv_soot_LOGN.h  dv_soot_MOMIC.cc  dv_soot_MOMIC.h  dv_soot_MONO.cc  dv_soot_MONO.h  dv_soot_QMOM.cc  dv_soot_QMOM.h  eispack.cc  eispack.h  pdgen.cc  vandermonde.cc  wheeler.cc  wheeler_ARCHES.cc
source/flmlt/: CMakeLists.txt  domaincase_flmlt.cc  domaincase_flmlt.h  domaincase_flmltX.cc  domaincase_flmltX.h  dv_chi_flmlt.cc  dv_chi_flmlt.h  dv_enth_flmlt.cc  dv_enth_flmlt.h  dv_enth_flmltX.cc  dv_enth_flmltX.h  dv_soot_flmlt.cc  dv_soot_flmlt.h  dv_soot_flmlt_CQMOM.h  dv_soot_flmlt_LOGN.h  dv_soot_flmlt_MOMIC.h  dv_soot_flmlt_MONO.h  dv_soot_flmlt_QMOM.h  dv_ygas_flmlt.cc  dv_ygas_flmlt.h  micromixer_flmlt.cc  micromixer_flmlt.h  solver_flmlt.cc  solver_flmlt.h
source/hips/: CMakeLists.txt  domaincase_hips.cc  domaincase_hips.h  domaincase_hips_comb.cc  domaincase_hips_comb.h  domaincase_hips_simpleRxn.cc  domaincase_hips_simpleRxn.h  dv_enth_hips.cc  dv_enth_hips.h  dv_mixf_hips.cc  dv_mixf_hips.h  dv_ygas_cold_hips.cc  dv_ygas_cold_hips.h  dv_ygas_hips.cc  dv_ygas_hips.h  hips.py  micromixer_hips.cc  micromixer_hips.h  solver_hips.cc  solver_hips.h  streams.py
source/nr/: CMakeLists.txt  interp_linear.cc  interp_linear.h
source/premix/: CMakeLists.txt  domaincase_premixedFlameBurner.cc  domaincase_premixedFlameBurner.h  domaincase_premixedFlameBurner_fixed_T.cc  domaincase_premixedFlameBurner_fixed_T.h  dv_temp_profile.cc  dv_temp_profile.h  micromixer_premix.cc  micromixer_premix.h  solver_premix.cc  solver_premix.h
source/radiation/: CMakeLists.txt  rad_fvdom.cc  rad_fvdom.h  rad_opthin.cc  rad_opthin.h  rad_twoflux.cc  rad_twoflux.h  radiation.cc  radiation.h  radiationProperties.cc  radiationProperties.h
source/user_chemical_mechanisms/: CMakeLists.txt  aramco_red86_nonstiff.cc  aramco_red86_stiff.cc  simple_dlr.cc
source/yaml/: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  cvodeDriver.cc  domain.cc  domain.h  eddy.cc  inputoutput.h  interp_linear.h  main.cc  meshManager.h  micromixer.cc  processor.cc  solver.cc  streams.cc  streams.h
src/cvode/: CMakeLists.txt  cvode.h  cvode_dense.h  cvode_dense_impl.h  cvode_impl.h  cvode_io.c  nvector_serial.c  sundials_dense.h  sundials_nvector.c  sundials_nvector.h
src/domaincases/: CMakeLists.txt  domaincase.h  domaincase_odt_RT.cc  domaincase_odt_channelScalar.h  domaincase_odt_coldJet.cc  domaincase_odt_coldPropaneJet.cc  domaincase_odt_isothermalWall.cc  domaincase_odt_jetFlame.cc  domaincase_odt_jetMixlRxn.cc  domaincase_odt_jetMixlRxn.h
src/domainvariables/: CMakeLists.txt  dv.cc  dv.h  dv_aDL.cc  dv_chi.cc  dv_chi_dmf.h  dv_dvisc.cc  dv_dvisc_const.cc  dv_enth.cc  dv_hr.cc  dv_mixf.cc  dv_pos.cc  dv_posf.cc  dv_rho.cc  dv_rho.h  dv_rho_mf.cc  dv_rho_mf.h  dv_sca.h  dv_temp.cc  dv_uvw.h  dv_ygas.cc  dv_ygas_noRxn.h
src/radiation/: CMakeLists.txt  rad_fvdom.cc  rad_opthin.h  rad_twoflux.cc  radiation.h  radiationProperties.cc
src/user_chemical_mechanisms/: CMakeLists.txt
(+336 files in other folders)
